--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h1>Restaurants</h1>
-<h2>I like</h2>
+
 <form method="get">
     <div class="form-group">
         <div class="input-group">
@@ -28,14 +28,20 @@
             <td>@restaurant.Cuisine</td>
             <td>
                 <a class="btn btn-lg"
-                   asp-page="./Detail" 
+                   asp-page="./Detail"
                    asp-route-restaurantId="@restaurant.Id">
                     <i class="glyphicon glyphicon-zoom-in"></i>
+                </a>
+                <a class="btn btn-lg"
+                   asp-page="./Edit"
+                   asp-route-restaurantId="@restaurant.Id">
+                    <i class="glyphicon glyphicon-edit"></i>
                 </a>
             </td>
         </tr>
     }
 </table>
 
+<a asp-page=".\Edit" class="btn btn-primary">Add New</a>
 
 <div>@Model.Message</div>
